<resources>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="app_name">Nama Aplikasi</string>
    <string name="app_copyright">Copyright</string>
    <string name="app_icon_desc">Icon</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="button_1">Image</string>
    <string name="button_2">Location</string>
    <string name="button_3">Map</string>
    <string name="button_4">Button4</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="image_button_1">Pick Gallery</string>
    <string name="image_button_2">Take Picture</string>
    <string name="image_view_desc">View</string>
    <string name="title_activity_gps">GPSActivity</string>
    <string name="gps_button_1">Get Location</string>
    <string name="gps_label_lat">Latitude: </string>
    <string name="gps_label_long">Longitude: </string>
    <string name="title_activity_map">MapActivity</string>

</resources>