<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_launcher"
        android:contentDescription="@string/image_view_desc" />

    <Button
        android:id="@+id/buttonImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_button_1" />

    <Button
        android:id="@+id/buttonImage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_button_2" />

</LinearLayout>